Revert "Fixed vertical alignment for start-page link in the sidebar."
This reverts commit 062924e9736a6ec17024ebf40dbdc8ea44a796eb.

--- a/app/assets/stylesheets/partials/_sidebar.scss
+++ b/app/assets/stylesheets/partials/_sidebar.scss
@@ -47,8 +47,8 @@
 
     #start-page {
       padding: {
-        top: 6px;
-        bottom: 8px;
+        top: 5px;
+        bottom: 5px;
       }
     }
   }
